--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,9 @@
     font-weight: 500;
 }
 
+.body-tables{
+    background-color: #F7F9FB;
+}
 
 .fingerprint-table{
     background-color: #F7F9FB;
